Update 'gjs2lcm27-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-830fb8892f.s0qp.p3.openshiftapps.com/rhtap/rhtap-qe:42f6e5f788f682547df00a9b5a6f5aeb3a3d1044@sha256:18453e8f106ef3078240e4e763fcccaa74d2f66705ee51159b4140ca495fe7fa

--- a/components/gjs2lcm27-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/gjs2lcm27-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: gjs2lcm27-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-830fb8892f.s0qp.p3.openshiftapps.com/rhtap/rhtap-qe:42f6e5f788f682547df00a9b5a6f5aeb3a3d1044@sha256:18453e8f106ef3078240e4e763fcccaa74d2f66705ee51159b4140ca495fe7fa
+          name: container-image
